# roughybot

./: .gitignore  README.md  roughybot_frames.gv
src/roughybot_description/: CMakeLists.txt  package.xml
src/roughybot_description/config/: controller_config.yaml  view_robot.rviz
src/roughybot_description/launch/: drive_robot.launch.py  load_controllers.launch.py  load_simulation.launch.py  view_roughybot.launch.py
src/roughybot_description/meshes/: base_link.stl  caster_wheel_link.stl  left_wheel_link.stl  lidar_link.stl
src/roughybot_description/urdf/: gazebo_params.gazebo  material.urdf.xacro  robot_core.urdf.xacro  ros2_control.urdf.xacro
src/roughybot_sim/: CMakeLists.txt  package.xml
src/roughybot_sim/config/: rviz_default.rviz
src/roughybot_sim/launch/: gz_bringup.launch.py  ros2_control_test_launch.py  rviz_bringup.launch.py
src/roughybot_sim/robot_description/meshes/: camera_link.stl  right_wheel_link.stl
src/roughybot_sim/robot_description/urdf/: robot_core.urdf.xacro
src/roughybot_sim/world/: default_world_room.sdf
